--- a/coc-settings.json
+++ b/coc-settings.json
@@ -36,5 +36,6 @@
     "plaintext",
     "python",
     "text"
-  ]
+  ],
+  "snippets.userSnippetsDirectory": "~/.config/nvim/plugged/vim-go/gosnippets/UltiSnips"
 }
